<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Choose_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_margin"
        android:textSize="@dimen/twentySp"
        android:textColor="@color/primary"
        android:text="@string/choose_shape"
        android:layout_margin="@dimen/base_margin"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/Rectangel_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_text"
        android:layout_margin="@dimen/base_margin" />

    <TextView
        android:id="@+id/Choose_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_margin"
        android:textSize="@dimen/twentySp"
        android:textColor="@color/primary"
        android:text="@string/choose_color"
        android:layout_margin="@dimen/base_margin"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/color_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_text"
        android:layout_margin="@dimen/base_margin" />

    <TextView
        android:id="@+id/add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_margin"
        android:textSize="@dimen/twentySp"
        android:textColor="@color/primary"
        android:text="@string/add_title"
        android:layout_margin="@dimen/base_margin"/>

    <EditText
        android:id="@+id/Title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/primary"
        android:padding="@dimen/input_padding"
        android:hint="@string/Type_here"
        android:singleLine="true"
        android:maxLength="15"/>

    <TextView
        android:id="@+id/add_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_margin"
        android:textSize="@dimen/twentySp"
        android:textColor="@color/primary"
        android:text="@string/add_description"
        android:layout_margin="@dimen/base_margin"/>

    <EditText
        android:id="@+id/Description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/primary"
        android:padding="@dimen/input_padding"
        android:hint="@string/Type_here"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:maxLength="80"
        android:ems="3"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/base_margin"
        android:text="@string/ADD"
        android:textSize="@dimen/medium_text" />


</LinearLayout>
    </ScrollView>